--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ python:
   - "3.8"
 # command to install dependencies
 install:
-  - pip install -r requirements.txt
-  - pip install -r requirements-dev.txt
-  - pip install .
+  - pip install poetry
+  - poetry build
+  - pip install dist/*tar.gz
 # command to run tests
 script: pytest
 after_success:
